# AD-Research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.local-db.yml  docker-compose.yml  pyproject.toml  redeploy.sh  redeploy2.sh  skills-lock.json  stage_deploy_files.sh
.github/: ALERTING.md
agent/: .gitkeep  Dockerfile  README.md  docker-compose.yml  requirements.txt
alembic/: env.py
app/: config.py  main.py
dev-notes/: us-stock-ai-integration-guide.md
docs/: 20260702-changelog.md  20260702-data-source-map.md  ROADMAP.md
reports/: report_pool_4_2026-06-02.html  report_pool_weekly_2_2026-06-10.html  report_pool_weekly_2_2026-06-20.html  report_pool_weekly_3_2026-06-10.html  report_pool_weekly_3_2026-06-20.html  report_pool_weekly_4_2026-06-02.html  report_pool_weekly_4_2026-06-10.html  report_pool_weekly_4_2026-06-20.html  report_pool_weekly_5_2026-06-10.html  report_pool_weekly_5_2026-06-20.html  report_pool_weekly_6_2026-06-10.html  report_pool_weekly_6_2026-06-20.html  review-a11y-mobile.md  review-dataviz.md  review-macro-researcher.md  review-news-analyst.md  review-ops-admin.md  review-platform-admin.md  review-quant-deep.md  review-quant-researcher.md  review-round2-aggregated-2026-07-16.md  review-senior-aggregated-2026-07-16.md  review-trader.md  review-uiux-designer.md
research/: orchestrator.py
scripts/: apply_missing_ai_research_tables.py  archive_logs.sh  audit_etl_freshness.py  audit_indicator_completeness.py  auto_migrate.sh  backfill_a_share_adj_factor.py  backfill_cninfo_reports.py  (+79 more)
(+1101 files in other folders)
