[tool.poetry]
name = "ad-research"
version = "0.1.0"
description = "AD-Research"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = { extras = ["asyncpg"], version = "^2.0.36" }
alembic = "^1.14"
psycopg2-binary = "^2.9"
redis = "^5.2"
apscheduler = "^3.11"
celery = "^5.4"
pydantic = "^2.10"
pydantic-settings = "^2.7"
pandas = "^2.2"
numpy = "^2.1"
akshare = "^1.15"
tushare = "^1.4"
yfinance = "^0.2.50"
openai = "^1.0"
anthropic = "^0.40"
requests = "^2.31"
httpx = {extras = ["http2"], version = "^0.28"}
python-dotenv = "^1.0"
python-jose = "^3.3.0"
bcrypt = "^4.2"
cryptography = "^43.0"
scipy = "^1.14"
jinja2 = "^3.1"
pdfplumber = "^0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.28"
black = "^24.10"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]
"scripts/**/*.py" = ["E402"]
"alembic/**/*.py" = ["E402", "F403"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
